# JadeAI

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  compose.yml  docker_run_local.sh  package.json  pnpm-lock.yaml
.agents/skills/finish-work/: SKILL.md
.agents/skills/onboard/: SKILL.md
.agents/skills/record-session/: SKILL.md
.github/workflows/: desktop-build.yml  release-desktop.yml
.trellis/: .template-hashes.json  workflow.md  worktree.yaml
.trellis/scripts/multi_agent/: create_pr.py
.trellis/spec/backend/: api-guidelines.md  auth-guidelines.md  database-guidelines.md  index.md
.trellis/spec/frontend/: component-guidelines.md  hook-guidelines.md  index.md  quality-guidelines.md
.trellis/spec/guides/: desktop-runtime-boundary.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/03-25-folk-fork-repo-refresh/: prd.md  (+1 more)
desktop/: package.json  vite.config.ts
desktop/dev-updater/: README.md  pubkey.txt
desktop/src/: i18n.ts  main.tsx  router.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: desktop-core.toml
desktop/src-tauri/src/: ai.rs  importer.rs  lib.rs  release.rs  settings.rs  storage.rs  workspace.rs
messages/: en.json  zh.json
scripts/: build-local-updater-feed.mjs  build-release-updater-manifest.mjs  build-tauri-desktop.mjs  dev-local.mjs  generate-release-notes.mjs  release-notes-shared.mjs  verify-desktop-lint-boundary.mjs  verify-desktop-release-readiness.mjs
src/app/: globals.css
src/stores/: ui-store.ts
(+182 files in other folders)
